# group_B_fyp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml
gui/: analyse_bag.py  test.py
gui/rosbag2_2026_07_10-11_36_36/: metadata.yaml  rosbag2_2026_07_10-11_36_36_0.db3
robot_simulation/: package.xml  setup.py
robot_simulation/config/: ekf.yaml  ros2_control.yaml
robot_simulation/launch/: pioneer.launch.py  simulation.launch.py
robot_simulation/robot_simulation/: ekf_logger.py  niku_controller.py  niku_controller_viapoints (copy).py  niku_controller_viapoints.py  plotter_suite.py  system_monitor.py  wall_follower.py
robot_simulation/urdf/: pioneer_3dx.urdf
robot_simulation/worlds/: Trajectory.wbt  (+9 more)
ros2_ws/src/robot_simulation/: package.xml  setup.py
ros2_ws/src/robot_simulation/config/: pioneer_3dx.yaml
ros2_ws/src/robot_simulation/gui/images/: test.py
ros2_ws/src/robot_simulation/launch/: simulation.launch.py
ros2_ws/src/robot_simulation/protos/: robot_a.proto
ros2_ws/src/robot_simulation/robot_simulation/: ekf_logger.py  gui.py  line_follower.py  metric_calculator.py  niku_controller_pid.py  niku_controller_viapoints.py  obstacle_avoidance_node.py  plotter_suite.py  robot_tool.py  system_monitor.py  teleop_node.py  wall_follower.py
ros2_ws/src/robot_simulation/urdf/: robot_a.urdf
ros2_ws/src/robot_simulation/worlds/: .Obstacle Avoidance (Garden).wbproj  .garden.wbproj  .line_following.wbproj  .world_2.wbproj  Obstacle_Avoidance.wbt  garden.wbt  obstacle_course.wbt  wall_following_1.wbt  wall_following_2.wbt  world_2.wbt
(+1 files in other folders)
