<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="theo@todo.todo">theo</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <depend>webots_ros2_driver</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
